// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SuggestionsList /> when isLoading=false with results renders as expected 1`] = `
<div
  className=
      y-suggestions-list
      y-hc-border
      {
        border-radius: 1px;
        border-width: 0px;
        border: none;
        box-shadow: 0 0 12px rgba(0, 0, 0, 0.2);
        padding-bottom: 4px;
        padding-top: 4px;
        width: 280px;
      }
>
  <LayoutList
    direction="vertical"
  >
    <LayoutListItem
      key="groupTitle"
    >
      <LayoutList
        direction="vertical"
      >
        <LayoutListItem
          key="id"
        >
          <SuggestionsListItem
            description="description"
            id="id"
            imageUrl="imageUrl"
            isSelected={false}
            name="name"
            onSelect={[MockFunction]}
            searchText="searchText"
          />
        </LayoutListItem>
      </LayoutList>
    </LayoutListItem>
  </LayoutList>
</div>
`;

exports[`<SuggestionsList /> when isLoading=false with results when onHover is called updates the state 1`] = `null`;

exports[`<SuggestionsList /> when isLoading=false with results with state.hoveredId=id renders as expected 1`] = `
<div
  className=
      y-suggestions-list
      y-hc-border
      {
        border-radius: 1px;
        border-width: 0px;
        border: none;
        box-shadow: 0 0 12px rgba(0, 0, 0, 0.2);
        padding-bottom: 4px;
        padding-top: 4px;
        width: 280px;
      }
>
  <LayoutList
    direction="vertical"
  >
    <LayoutListItem
      key="groupTitle"
    >
      <LayoutList
        direction="vertical"
      >
        <LayoutListItem
          key="id"
        >
          <SuggestionsListItem
            description="description"
            id="id"
            imageUrl="imageUrl"
            isSelected={false}
            name="name"
            onSelect={[MockFunction]}
            searchText="searchText"
          />
        </LayoutListItem>
      </LayoutList>
    </LayoutListItem>
  </LayoutList>
</div>
`;

exports[`<SuggestionsList /> when isLoading=false with results with state.hoveredId=id when the mouse leaves renders as expected 1`] = `
<div
  className=
      y-suggestions-list
      y-hc-border
      {
        border-radius: 1px;
        border-width: 0px;
        border: none;
        box-shadow: 0 0 12px rgba(0, 0, 0, 0.2);
        padding-bottom: 4px;
        padding-top: 4px;
        width: 280px;
      }
>
  <LayoutList
    direction="vertical"
  >
    <LayoutListItem
      key="groupTitle"
    >
      <LayoutList
        direction="vertical"
      >
        <LayoutListItem
          key="id"
        >
          <SuggestionsListItem
            description="description"
            id="id"
            imageUrl="imageUrl"
            isSelected={false}
            name="name"
            onSelect={[MockFunction]}
            searchText="searchText"
          />
        </LayoutListItem>
      </LayoutList>
    </LayoutListItem>
  </LayoutList>
</div>
`;

exports[`<SuggestionsList /> when isLoading=false without results renders as expected 1`] = `
<div
  className=
      y-suggestions-list
      y-hc-border
      {
        border-radius: 1px;
        border-width: 0px;
        border: none;
        box-shadow: 0 0 12px rgba(0, 0, 0, 0.2);
        width: 280px;
      }
>
  <Block
    padding="large"
    textAlign="center"
    textSize="small"
  >
    <Text
      color="metadata"
    >
      noResultsText
    </Text>
  </Block>
</div>
`;

exports[`<SuggestionsList /> when isLoading=true with results renders as expected 1`] = `
<div
  className=
      y-suggestions-list
      y-hc-border
      {
        border-radius: 1px;
        border-width: 0px;
        border: none;
        box-shadow: 0 0 12px rgba(0, 0, 0, 0.2);
        padding-top: 4px;
        width: 280px;
      }
>
  <LayoutList
    direction="vertical"
  >
    <LayoutListItem
      key="groupTitle"
    >
      <LayoutList
        direction="vertical"
      >
        <LayoutListItem
          key="id"
        >
          <SuggestionsListItem
            description="description"
            id="id"
            imageUrl="imageUrl"
            isSelected={false}
            name="name"
            onSelect={[MockFunction]}
            searchText="searchText"
          />
        </LayoutListItem>
      </LayoutList>
    </LayoutListItem>
  </LayoutList>
  <div
    className=

        {
          border-top: 1px solid #f3f5f8;
          padding-bottom: 14px;
          padding-top: 13px;
        }
  >
    <Spinner
      isCentered={true}
      text="loadingText"
    />
  </div>
</div>
`;

exports[`<SuggestionsList /> when isLoading=true with results when onHover is called updates the state 1`] = `null`;

exports[`<SuggestionsList /> when isLoading=true with results with state.hoveredId=id renders as expected 1`] = `
<div
  className=
      y-suggestions-list
      y-hc-border
      {
        border-radius: 1px;
        border-width: 0px;
        border: none;
        box-shadow: 0 0 12px rgba(0, 0, 0, 0.2);
        padding-top: 4px;
        width: 280px;
      }
>
  <LayoutList
    direction="vertical"
  >
    <LayoutListItem
      key="groupTitle"
    >
      <LayoutList
        direction="vertical"
      >
        <LayoutListItem
          key="id"
        >
          <SuggestionsListItem
            description="description"
            id="id"
            imageUrl="imageUrl"
            isSelected={false}
            name="name"
            onSelect={[MockFunction]}
            searchText="searchText"
          />
        </LayoutListItem>
      </LayoutList>
    </LayoutListItem>
  </LayoutList>
  <div
    className=

        {
          border-top: 1px solid #f3f5f8;
          padding-bottom: 14px;
          padding-top: 13px;
        }
  >
    <Spinner
      isCentered={true}
      text="loadingText"
    />
  </div>
</div>
`;

exports[`<SuggestionsList /> when isLoading=true with results with state.hoveredId=id when the mouse leaves renders as expected 1`] = `
<div
  className=
      y-suggestions-list
      y-hc-border
      {
        border-radius: 1px;
        border-width: 0px;
        border: none;
        box-shadow: 0 0 12px rgba(0, 0, 0, 0.2);
        padding-top: 4px;
        width: 280px;
      }
>
  <LayoutList
    direction="vertical"
  >
    <LayoutListItem
      key="groupTitle"
    >
      <LayoutList
        direction="vertical"
      >
        <LayoutListItem
          key="id"
        >
          <SuggestionsListItem
            description="description"
            id="id"
            imageUrl="imageUrl"
            isSelected={false}
            name="name"
            onSelect={[MockFunction]}
            searchText="searchText"
          />
        </LayoutListItem>
      </LayoutList>
    </LayoutListItem>
  </LayoutList>
  <div
    className=

        {
          border-top: 1px solid #f3f5f8;
          padding-bottom: 14px;
          padding-top: 13px;
        }
  >
    <Spinner
      isCentered={true}
      text="loadingText"
    />
  </div>
</div>
`;

exports[`<SuggestionsList /> when isLoading=true without results renders as expected 1`] = `
<div
  className=
      y-suggestions-list
      y-hc-border
      {
        border-radius: 1px;
        border-width: 0px;
        border: none;
        box-shadow: 0 0 12px rgba(0, 0, 0, 0.2);
        width: 280px;
      }
>
  <div
    className=

        {
          padding-bottom: 14px;
          padding-top: 14px;
        }
  >
    <Spinner
      isCentered={true}
      text="loadingText"
    />
  </div>
</div>
`;
